--- a/index.html
+++ b/index.html
@@ -7,11 +7,24 @@
 </head>
 <body>
     <header>
-        <h1>Inicio de Proyecto</h1>
+        <h1>"Pintureria Siete Colores"</h1>  
+        <!-- Nombre aleatorio se puede cambiar -->
+        <div>
+            <a href="#">Contactanos</a>
+            <a href="#">Sobre Nosotros</a>
+            <a href="#">Otros</a>      
+        </div>
     </header>
-    <main></main>
+    <main>
+        <div>
+            <h3>Nuestras marcas</h3>
+            
+        </div>
+    </main>
 
-    <footer></footer>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
