--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <header>
-        <h1>"Pintureria Siete Colores"</h1>  
+        <h1>"Pintureria Siete Colores"</h1> 
+         
         <!-- Nombre aleatorio se puede cambiar -->
         <div>
-            <a href="#">Contactanos</a>
+            <a href="./contacto.html">Contactanos</a>
             <a href="#">Sobre Nosotros</a>
             <a href="#">Otros</a>      
         </div>
