--- a/contacto.html
+++ b/contacto.html
@@ -11,9 +11,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Abel&family=Nanum+Gothic+Coding:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header></header>
+    <header class="barra">
+        <h1><i class="fa-solid fa-paint-roller fa-bounce" style="color: #edeff0;"></i>Pintureria Siete Colores</h1>
+       <div class="menu"> <a href="./index.html"><i class="fa-solid fa-house"></i></a>
+        <a href="#"><i class="fa-solid fa-book-open"></i></a>
+    </div> 
+    </header>
     <main>
-        <i class="fa-solid fa-paint-roller fa-bounce" style="color: #032239;"></i><h1>Pintureria Siete Colores</h1>
+        
         <h2>Contactanos con nosotros para recibir novedades!</h2>
        <div class="form">
         <form action="" class="formulario">
@@ -51,6 +56,8 @@
             
        </div> 
     </main>
-    <footer></footer>
+    <footer>
+
+    </footer>
 </body>
 </html>
