--- a/contacto.html
+++ b/contacto.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <header class="barra">
-        <h1><i class="fa-solid fa-paint-roller fa-bounce" style="color: #edeff0;"></i>Pintureria Siete Colores</h1>
-       <div class="menu"> <a href="./index.html"><i class="fa-solid fa-house"></i></a>
-        <a href="#"><i class="fa-solid fa-book-open"></i></a>
+        <h1 class="titulo"><i class="fa-solid fa-paint-roller fa-bounce" style="color: #edeff0;"></i>Pintureria Siete Colores</h1>
+       <div class="menu"> <a href="./index.html"><i class="fa-solid fa-house fa-xl"></i></a>
+        <a href="#"><i class="fa-solid fa-book-open fa-xl"></i></a>
     </div> 
     </header>
     <main>
@@ -24,10 +24,10 @@
         <form action="" class="formulario">
             <h3>Por favor rellena este formulario</h3>
         <div class="elementos">
-            <label for="">Nombre: </label> <input type="text" placeholder="Escribe tu nombre">
-            <label for="">Apellido: </label><input type="text" placeholder="Escribe tu apellido">
-            <label for="">Email: </label> <input type="email" placeholder="@email">
-            <label for="">Selecciona tu ciudad: </label><select name="ciudad" id=""><option value="1">Buenos Aires</option>
+           <div> <label for="">Nombre: </label> <input type="text" placeholder="Escribe tu nombre"></div>
+           <div> <label for="">Apellido: </label><input type="text" placeholder="Escribe tu apellido"> </div>
+         <div>   <label for="">Email: </label> <input type="email" placeholder="@email"></div>
+           <div> <label for="">Selecciona tu ciudad: </label><select name="ciudad" id=""><option value="1">Buenos Aires</option>
             <option value="2">San Juan</option>
             <option value="3">Cordoba</option>
             <option value="4">Salta</option>
@@ -35,7 +35,7 @@
             <option value="6">Entre Rios</option>
             <option value="7">Rosario</option>
             <option value="8">Chubut</option>
-            </select> 
+            </select> </div>
         </div>
             <h4>Deseo Recibir Novedades y Ofertas</h4>
             <div class="form-check form-check-inline">
