--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,8 @@
             <a href="#">Preguntas frecuentes</a> 
              
         </nav>
-        <!-- <section></section>
+        <!-- En el header solo deje el navegador, esto comentado lo pase al main con una section para que quede prolijo con el navegador -->
+        <!-- 
         <h1 class="titulo"><i class="fa-solid fa-paint-roller fa-bounce" style="color: #edeff0;"></i>Pintureria Siete Colores</h1>
        <div class="menu"> <a href="./index.html"><i class="fa-solid fa-house fa-xl"></i></a>
         <a href="#"><i class="fa-solid fa-book-open fa-xl"></i></a>
