--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="contenedor">
                 <img src="./img/rodillo.jpg"  alt="foto de rodillo pintor" class="detail-img">
                 <div class="product-detail">
-                    <p class="product-text">Rodillos</p>
+                    <p class="product-text">Rodillo</p>
                 </div>
             </div>
               
