--- a/index.html
+++ b/index.html
@@ -7,12 +7,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
+    <script
+      src="https://kit.fontawesome.com/3c809bfe13.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&family=Nanum+Gothic+Coding:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Proyecto integrador</title>
 </head>
 <body>
     <header>
         <nav class="navegador">
-           <h1>"Pintureria Siete Colores"</h1> 
+            <i
+            class="fa-solid fa-paint-roller fa-bounce"
+            style="color: #141414"
+          ></i
+          ><h1>"Pintureria Siete Colores"</h1> 
          
         <!-- Nombre aleatorio se puede cambiar -->
           
