--- a/contacto.html
+++ b/contacto.html
@@ -25,9 +25,9 @@
 
         <a href="./contacto.html">Contactanos</a>
 
-        <a href="#">Sobre Nosotros</a>
+        <a href="./nosotros.html">Sobre Nosotros</a>
 
-        <a href="#">Preguntas frecuentes</a>
+        <a href="./sucursales.html">Sucursales</a>
       </nav>
       <!-- En el header solo deje el navegador, esto comentado lo pase al main con una section para que quede prolijo con el navegador -->
       <!-- 
@@ -110,8 +110,5 @@
         </form>
       </div>
     </main>
-    <footer>
-      <a href="#">Sucursales</a>
-    </footer>
   </body>
 </html>
