--- a/contacto.html
+++ b/contacto.html
@@ -11,10 +11,8 @@
     <link rel="stylesheet" href="./styles/contacto.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Abel&family=Nanum+Gothic+Coding:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    
   </head>
   <body>
     <!-- <header class="barra"> -->
@@ -43,9 +41,7 @@
         <h1 class="titulo">
           <i
             class="fa-solid fa-paint-roller fa-bounce"
-            style="color: #edeff0"
-          ></i
-          >Pintureria Siete Colores
+            style="color: #edeff0"></i>Pintureria Siete Colores
         </h1>
       </section>
       <h2>Contactate con nosotros para recibir novedades!</h2>
@@ -110,5 +106,8 @@
         </form>
       </div>
     </main>
+  <footer>
+      <a href="#">Encontranos en Argerich 4324, C.A.B.A., Argentina de Lunes a Viernes de 8.30 a 17.00.</a>
+  </footer>
   </body>
 </html>
