--- a/nosotros.html
+++ b/nosotros.html
@@ -39,9 +39,9 @@
       <section class="medida">
       <h2>Sobre Nosotros</h2>
         <div>
-          <h3>Pinturería Siete Colores es una de las principales cadenas dedicadas a la venta de pintura e insumos para la decoración del hogar y uno de los principales asesores del sector. Desde 1971 se desenvuelve tanto en el ámbito de las obras particulares como de las industriales, atendiendo las necesidades de múltiples mercados. Hoy, gracias al esfuerzo diario de sus directivos y equipo y a la fidelidad de sus clientes, ocupa una posición de liderazgo en el mercado.
+          <p>Pinturería Siete Colores es una de las principales cadenas dedicadas a la venta de pintura e insumos para la decoración del hogar y uno de los principales asesores del sector. Desde 1971 se desenvuelve tanto en el ámbito de las obras particulares como de las industriales, atendiendo las necesidades de múltiples mercados. Hoy, gracias al esfuerzo diario de sus directivos y equipo y a la fidelidad de sus clientes, ocupa una posición de liderazgo en el mercado.
 
-            El respaldo humano de alta calificación y la política de mejorar la calidad de sus servicios, permiten la dinámica necesaria para cumplir con las exigencias de los clientes no solo de la zona sur del Gran Buenos Aires sino de todo el país, tanto en velocidad de respuesta como en satisfacción de sus expectativas.</h3>
+            El respaldo humano de alta calificación y la política de mejorar la calidad de sus servicios, permiten la dinámica necesaria para cumplir con las exigencias de los clientes no solo de la zona sur del Gran Buenos Aires sino de todo el país, tanto en velocidad de respuesta como en satisfacción de sus expectativas.</p>
         </div>
       </section>
     </main>
