--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
 
     <footer>
         <a href="#">Encontranos en Argerich 4324, C.A.B.A., Argentina de Lunes a Viernes de 8.30 a 17.00.</a>
+        
+        <select name="Integrantes" id="">
+            <option value="">Integrantes</option>
+            <option value="">Agustina Paladini</option>
+            <option value="">Mariela Castro</option>
+            <option value="">Mariano Aballay</option>
+        </select>
     </footer>
     
 </body>
