--- a/alba.html
+++ b/alba.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://kit.fontawesome.com/3c809bfe13.js"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
     <title>Contacto</title>
-    <link rel="stylesheet" href="./styles/contacto.css" />
+    <link rel="stylesheet" href="./styles/productos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&family=Nanum+Gothic+Coding:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- <header class="barra"> -->
@@ -43,7 +46,7 @@
             Pinturas de gran calidad y durabilidad diseñadas para proteger y decorar tus ambientes interiores y exteriores.
          </h3>
 
-         <h3>INTERIOR</h3>
+         <h3>Interior</h3>
          <li>
             <b>Albatex:</b> Pintura de interiores blanca, entonable con tonalba.
          </li>
@@ -72,7 +75,7 @@
             <b>Albacryl:</b> Látex para interior y exterior mate. Gran poder cubritivo, antihongo.
          </li>
 
-         <h3>EXTERIOR</h3>
+         <h3>Exterior</h3>
          <li>
             <b>Albalux:</b> Esmalte sintetico brillante.
          </li>
