--- a/plavicon.html
+++ b/plavicon.html
@@ -8,10 +8,13 @@
       crossorigin="anonymous"
     ></script>
     <title>Contacto</title>
-    <link rel="stylesheet" href="./styles/contacto.css" />
+    <link rel="stylesheet" href="./styles/productos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&family=Nanum+Gothic+Coding:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- <header class="barra"> -->
@@ -37,9 +40,9 @@
           >Pintureria Siete Colores
         </h1>
       </section>
-      <h2>Proteccion Plavicon</h2>
+      <h2>PROTECCION PLAVICON</h2>
         <div>
-         <h3>IMPERMEABILIZANTE TECHOS</h3>
+         <h3><b>Impermeabilizante techos</b></h3>
          <li>
             <b>Plavicon Fibrado Silicona:</b> Impermeabilizante para techos con fibras incorporadas.
          </li>
@@ -62,7 +65,7 @@
             <b>Plavicon Tapagoteras:</b> Impermeabilizante transparente.
          </li>
 
-         <h3>IMPERMEABILIZANTE PAREDES</h3>
+         <h3><b>Impermeabilizante paredes</b></h3>
          <li>
             <b>Plavicon Muros XP:</b> Impermeabilizante plástico para exteriores.
          </li>
