--- a/rodillos.html
+++ b/rodillos.html
@@ -8,10 +8,13 @@
       crossorigin="anonymous"
     ></script>
     <title>Contacto</title>
-    <link rel="stylesheet" href="./styles/contacto.css" />
+    <link rel="stylesheet" href="./styles/productos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&family=Nanum+Gothic+Coding:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- <header class="barra"> -->
@@ -37,17 +40,17 @@
           >Pintureria Siete Colores
         </h1>
       </section>
-      <h2>Rodillos</h2>
+      <h2>RODILLOS</h2>
         <div>
          <h3>Elegir un rodillo adecuado es imprescindible para pintar superfices de gran tamaño, como paredes, techos o suelos y obtener acabados profesionales.</h3>
-         
-         <h4>RODILLOS SIMIL LANA</h4>
-         <h4>RODILLOS LANA 100%</h4>
-         <h4>RODILLOS CUERO LANAR</h4>
-         <h4>RODILLOS HILADO</h4>
-         <h4>RODILLOS FIBER</h4>
-         <h4>RODILLOS POLYESTER</h4>
-         <h4>RODILLOS ESPECIALES</h4>
+
+         <li>RODILLOS SIMIL LANA</li>
+         <li>RODILLOS LANA 100%</li>
+         <li>RODILLOS CUERO LANAR</li>
+         <li>RODILLOS HILADO</li>
+         <li>RODILLOS FIBER</li>
+         <li>RODILLOS POLYESTER</li>
+         <li>RODILLOS ESPECIALES</li>
         </div>
     </main>
   </body>
