--- a/tersuave.html
+++ b/tersuave.html
@@ -8,10 +8,13 @@
       crossorigin="anonymous"
     ></script>
     <title>Contacto</title>
-    <link rel="stylesheet" href="./styles/contacto.css" />
+    <link rel="stylesheet" href="./styles/productos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&family=Nanum+Gothic+Coding:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- <header class="barra"> -->
@@ -37,18 +40,18 @@
           >Pintureria Siete Colores
         </h1>
       </section>
-      <h2>Pintura Tersuave</h2>
+      <h2>PINTURA TERSUAVE</h2>
         <div>
-         <h3>LINEA ARQUITECTONICA</h3>
+         <li><b>Línea Arquitectónica</b></li>
          <h4>La línea más completa de productos para Hogar y Obra se encuentran en esta línea.</h4>
 
-         <h3>LINEA INDUSTRIA</h3>
+         <li><b>Línea Industria</b></li>
          <h4>Productos destinados al segmento industrial brindan las soluciones que el mercado demanda.</h4>
 
-         <h3>LINEA AUTOMOTOR</h3>
+         <li><b>Línea Automotor</b></li>
          <h4>El rubro automotriz encuentra una gama completa de productos destinados a sus necesidades.</h4>
 
-         <h3>LINEA DILUYENTE</h3>
+         <li><b>Línea Diluyente</b></li>
          <h4>Diluyentes de alta perfomance destinados al uso doméstico, profesional e industrial.</h4>
         </div>
     </main>
