--- a/brochas.html
+++ b/brochas.html
@@ -8,10 +8,13 @@
       crossorigin="anonymous"
     ></script>
     <title>Contacto</title>
-    <link rel="stylesheet" href="./styles/contacto.css" />
+    <link rel="stylesheet" href="./styles/productos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&family=Nanum+Gothic+Coding:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- <header class="barra"> -->
@@ -37,15 +40,25 @@
           >Pintureria Siete Colores
         </h1>
       </section>
-      <h2>Brochas</h2>
+      <h2><b>BROCHAS</b></h2>
         <div>
          <h3>Brochas de pintor fabricadas con cerdas naturales y sintéticas de elevada calidad, bases metálicas muy resistentes y mangos en madera de primera.</h3>
          
-         <h4>BROCHAS CHATAS</h4>
-         <h4>BROCHAS SIMPLES</h4>
-         <h4>BROCHAS DOBLES</h4>
-         <h4>BROCHAS PROFESIONALES</h4>
-         <h4>BROCHAS ESPECIALES</h4>
+         <li>
+          BROCHAS CHATAS
+         </li>
+         <li>
+          BROCHAS SIMPLES
+         </li>
+         <li>
+          BROCHAS DOBLES
+         </li>
+         <li>
+          BROCHAS PROFESIONALES
+         </li>
+         <li>
+          BROCHAS ESPECIALES
+         </li>
         </div>
     </main>
   </body>
