--- a/alba.html
+++ b/alba.html
@@ -7,14 +7,11 @@
       src="https://kit.fontawesome.com/3c809bfe13.js"
       crossorigin="anonymous"
     ></script>
-    <title>Contacto</title>
+    <title>Producto</title>
     <link rel="stylesheet" href="./styles/productos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Abel&family=Nanum+Gothic+Coding:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- <header class="barra"> -->
@@ -35,8 +32,7 @@
         <h1 class="titulo">
           <i
             class="fa-solid fa-paint-roller fa-bounce"
-            style="color: #edeff0"
-          ></i
+            style="color: #edeff0"></i
           >Pintureria Siete Colores
         </h1>
       </section>
