--- a/sucursales.html
+++ b/sucursales.html
@@ -8,7 +8,7 @@
       crossorigin="anonymous"
     ></script>
     <title>Contacto</title>
-    <link rel="stylesheet" href="./styles/contacto.css" />
+    <link rel="stylesheet" href="./styles/sucursales.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -33,9 +33,7 @@
         <h1 class="titulo">
           <i
             class="fa-solid fa-paint-roller fa-bounce"
-            style="color: #edeff0"
-          ></i
-          >Pintureria Siete Colores
+            style="color: #061116"></i>Pintureria Siete Colores
         </h1>
       </section>
       <h2>Sucursales</h2>
