--- a/contacto.html
+++ b/contacto.html
@@ -41,7 +41,7 @@
         <h1 class="titulo">
           <i
             class="fa-solid fa-paint-roller fa-bounce"
-            style="color: #edeff0"></i>Pintureria Siete Colores
+            style="color: #061116"></i>Pintureria Siete Colores
         </h1>
       </section>
       
