--- a/plavicon.html
+++ b/plavicon.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Abel&family=Nanum+Gothic+Coding:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="./img/7 C.png">
   </head>
   <body>
     <!-- <header class="barra"> -->
