arreglo del menu

--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
         <!-- Nombre aleatorio se puede cambiar -->
         <a href="./index.html">Inicio</a>
 
-        <a href="./contacto.html">Contactanos</a>
+        <!-- <a class="nos" href="./contacto.html">Contactanos</a> -->
 
         <a href="./nosotros.html">Sobre Nosotros</a>
 
