--- a/alba.html
+++ b/alba.html
@@ -37,8 +37,9 @@
           >Pintureria Siete Colores
         </h1>
       </section>
-      <h2>Pintura ALBA</h2>
+     
         <div>
+         <h2>Pintura ALBA</h2>
          <h3>
             Pinturas de gran calidad y durabilidad diseñadas para proteger y decorar tus ambientes interiores y exteriores.
          </h3>
@@ -99,5 +100,15 @@
          </li>
         </div>
     </main>
+    <footer>
+      <a href="#">Encontranos en Argerich 4324, C.A.B.A., Argentina de Lunes a Viernes de 8.30 a 17.00.</a>
+      
+      <select name="Integrantes" id="">
+          <option value="">Integrantes</option>
+          <option value="">Agustina Paladini</option>
+          <option value="">Mariela Castro</option>
+          <option value="">Mariano Aballay</option>
+      </select>
+  </footer>
   </body>
 </html>
