--- a/colorin.html
+++ b/colorin.html
@@ -36,13 +36,12 @@
         <h1 class="titulo">
           <i
             class="fa-solid fa-paint-roller fa-bounce"
-            style="color: #edeff0"
-          ></i
-          >Pintureria Siete Colores
+            style="color: #edeff0"></i>Pintureria Siete Colores
         </h1>
       </section>
-      <h2>Pintura Colorin</h2>
+      
         <div>
+        <h2>Pintura Colorin</h2>
          <li>TITANIO LATEX INTERIOR</li>
          <h4>Pintura al látex blanca mate para exteriores, de fácil aplicación; proporciona un recubrimiento uniforme y de rápido secado. Especialmente formulada para Profesionales y Contratistas de pintura.</h4>
 
@@ -78,5 +77,16 @@
 
         </div>
     </main>
+    <footer>
+      <a href="#">Encontranos en Argerich 4324, C.A.B.A., Argentina de Lunes a Viernes de 8.30 a 17.00.</a>
+      
+      <select name="Integrantes" id="">
+          <option value="">Integrantes</option>
+          <option value="">Agustina Paladini</option>
+          <option value="">Mariela Castro</option>
+          <option value="">Mariano Aballay</option>
+      </select>
+  </footer>
+  
   </body>
 </html>
