--- a/nosotros.html
+++ b/nosotros.html
@@ -21,7 +21,7 @@
         
           <i
             class="fa-solid fa-paint-roller fa-bounce"
-            style="color: #061116"></i>Pintureria Siete Colores
+            style="color: #061116"></i><p>Pintureria Siete Colores</p>
         
         <!-- Nombre aleatorio se puede cambiar -->
         <a href="./index.html">Inicio</a>
