--- a/plavicon.html
+++ b/plavicon.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://kit.fontawesome.com/3c809bfe13.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <title>Contacto</title>
     <link rel="stylesheet" href="./styles/productos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Abel&family=Nanum+Gothic+Coding:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="icon" href="./img/7 C.png">
   </head>
   <body>
@@ -36,13 +34,12 @@
         <h1 class="titulo">
           <i
             class="fa-solid fa-paint-roller fa-bounce"
-            style="color: #edeff0"
-          ></i
-          >Pintureria Siete Colores
+            style="color: #edeff0"></i>Pintureria Siete Colores
         </h1>
       </section>
-      <h2>PROTECCION PLAVICON</h2>
+     
         <div>
+         <h2>PROTECCION PLAVICON</h2>
          <h3><b>Impermeabilizante techos</b></h3>
          <li>
             <b>Plavicon Fibrado Silicona:</b> Impermeabilizante para techos con fibras incorporadas.
@@ -90,5 +87,15 @@
          </li>
         </div>
     </main>
+    <footer>
+      <a href="#">Encontranos en Argerich 4324, C.A.B.A., Argentina de Lunes a Viernes de 8.30 a 17.00.</a>
+      
+      <select name="Integrantes" id="">
+          <option value="">Integrantes</option>
+          <option value="">Agustina Paladini</option>
+          <option value="">Mariela Castro</option>
+          <option value="">Mariano Aballay</option>
+      </select>
+  </footer>
   </body>
 </html>
