--- a/rodillos.html
+++ b/rodillos.html
@@ -13,8 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Abel&family=Nanum+Gothic+Coding:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link rel="icon" href="./img/7 C.png">
   </head>
   <body>
@@ -36,13 +35,12 @@
         <h1 class="titulo">
           <i
             class="fa-solid fa-paint-roller fa-bounce"
-            style="color: #edeff0"
-          ></i
-          >Pintureria Siete Colores
+            style="color: #edeff0"></i>Pintureria Siete Colores
         </h1>
       </section>
-      <h2>RODILLOS</h2>
+      
         <div>
+          <h2>RODILLOS</h2>
          <h3>Elegir un rodillo adecuado es imprescindible para pintar superfices de gran tamaño, como paredes, techos o suelos y obtener acabados profesionales.</h3>
 
          <li>RODILLOS SIMIL LANA</li>
@@ -54,5 +52,15 @@
          <li>RODILLOS ESPECIALES</li>
         </div>
     </main>
+    <footer>
+      <a href="#">Encontranos en Argerich 4324, C.A.B.A., Argentina de Lunes a Viernes de 8.30 a 17.00.</a>
+      
+      <select name="Integrantes" id="">
+          <option value="">Integrantes</option>
+          <option value="">Agustina Paladini</option>
+          <option value="">Mariela Castro</option>
+          <option value="">Mariano Aballay</option>
+      </select>
+  </footer>
   </body>
 </html>
