--- a/contacto.html
+++ b/contacto.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://kit.fontawesome.com/3c809bfe13.js"
-      crossorigin="anonymous"
-    ></script>
-    <title>Contacto</title>
+      crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="./styles/contacto.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="icon" href="./img/7 C.png">
+    <title>Contacto</title>
   </head>
   <body>
     <!-- <header class="barra"> -->
@@ -21,7 +21,7 @@
       <nav class="navegador">
         <i
             class="fa-solid fa-paint-roller fa-bounce"
-            style="color: #141414"></i>Pintureria Siete Colores
+            style="color: #141414"></i><p>Pintureria Siete Colores</p>
         <!-- Nombre aleatorio se puede cambiar -->
         <a href="./index.html">Inicio</a>
 
