--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
             
                 <img src="./img/foto1.jpg"  alt="foto de pintura alba" class="detail-img">
                 <div class="product-detail">
-                    <a href="./templates/alba.html" ><p class="product-text" >Pinturas Alba</p></a> 
+                    <a href="./templates/alba.html" ><p class="product-text" >Pinturas Alba</p><p class="product-text">$5900</p></a> 
                 </div>
             </div>
             <div class="contenedor">
                 <img src="./img/foto2.png"  alt="foto de pintura tersuave" class="detail-img">
                 <div class="product-detail">
-                    <a href="./templates/tersuave.html"><p class="product-text">Pinturas Tersuave</p></a>
+                    <a href="./templates/tersuave.html"><p class="product-text">Pinturas Tersuave</p><p class="product-text">$5900</p></a>
                 </div>
             </div>
             <div class="contenedor">
                 <img src="./img/foto3.png"  alt="foto de pintura colorin" class="detail-img">
                 <div class="product-detail">
-                    <a href="./templates/colorin.html"><p class="product-text">Pinturas Colorin</p></a>
+                    <a href="./templates/colorin.html"><p class="product-text">Pinturas Colorin</p><p class="product-text">$5900</p></a>
                 </div>
             </div>
             <div class="contenedor">
                 <img src="./img/foto4.png"  alt="foto plavicon" class="detail-img">
                 <div class="product-detail">
-                    <a href="./templates/plavicon.html"><p class="product-text">Protección Plavicon</p></a>
+                    <a href="./templates/plavicon.html"><p class="product-text">Protección Plavicon</p><p class="product-text">$5900</p></a>
                 </div>
             </div>
 
@@ -66,13 +66,13 @@
             <div class="contenedor">
                 <img src="./img/brocha2.png"  alt="foto de brocha pintor " class="detail-img">
                 <div class="product-detail">
-                    <a href="./templates/brochas.html"><p class="product-text">Brochas</p></a>
+                    <a href="./templates/brochas.html"><p class="product-text">Brochas</p><p class="product-text">$5900</p></a>
                 </div>
             </div>
             <div class="contenedor">
                 <img src="./img/rodillo.jpg"  alt="foto de rodillo pintor" class="detail-img">
                 <div class="product-detail">
-                    <a href="./templates/rodillos.html"><p class="product-text">Rodillos</p></a>
+                    <a href="./templates/rodillos.html"><p class="product-text">Rodillos</p><p class="product-text">$5900</p></a>
                 </div>
             </div>
               
@@ -88,7 +88,7 @@
     </main>
 
     <footer>
-        <a href="#">Encontranos en Argerich 4324, C.A.B.A., Argentina de Lunes a Viernes de 8.30 a 17.00.</a>
+        <a href="#">Encontranos  en Argerich 4324, C.A.B.A., Argentina de Lunes a Viernes de 8.30 a 17.00.</a>
         <a href="./templates/ingreso.html">Cargar productos</a>
         <select name="Integrantes" id="">
             <option value="">Integrantes</option>
