--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
         <section class="marcas-productos">
             <h3>Nuestros productos</h3>
-            <div class="grid-contenedor">
+            <div id="list" class="grid-contenedor">
             <div class="contenedor">
             
                 <!-- <img src="./img/foto1.jpg"  alt="foto de pintura alba" class="detail-img">
